// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Axis component renders a bottom axis 1`] = `
<DocumentFragment>
  <svg>
    <text
      class="chart-it axis-title"
      transform="translate(-20, 230)rotate(270)"
    >
      x
    </text>
    <g
      transform="translate(10, 0)"
    >
      <g
        class="chart-it axis axis-left"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        style="color: rgb(51, 51, 51); stroke-opacity: 0.8; stroke-width: 1;"
        text-anchor="end"
      >
        <path
          class="domain"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(0,0.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(0,10.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(0,20.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(0,30.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(0,40.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(0,50.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(0,60.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(0,70.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(0,80.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(0,90.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(0,100.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          />
        </g>
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Axis component renders a left axis 1`] = `
<DocumentFragment>
  <svg>
    <text
      class="chart-it axis-title"
      transform="translate(-20, 230)rotate(270)"
    >
      y
    </text>
    <g
      transform="translate(10, 0)"
    >
      <g
        class="chart-it axis axis-left"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        style="color: rgb(51, 51, 51); stroke-opacity: 0.8; stroke-width: 1;"
        text-anchor="end"
      >
        <path
          class="domain"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(0,0.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(0,5.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(0,10.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(0,15.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(0,20.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(0,25.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(0,30.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(0,35.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(0,40.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(0,45.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(0,50.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          />
        </g>
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Axis component renders a right axis 1`] = `
<DocumentFragment>
  <svg>
    <text
      class="chart-it axis-title"
      transform="translate(1015, 230)rotate(270)"
    >
      y
    </text>
    <g
      transform="translate(980, 0)"
    >
      <g
        class="chart-it axis axis-right"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        style="color: rgb(51, 51, 51); stroke-opacity: 0.8; stroke-width: 1;"
        text-anchor="start"
      >
        <path
          class="domain"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(0,0.5)"
        >
          <line
            stroke="currentColor"
            x2="6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(0,5.5)"
        >
          <line
            stroke="currentColor"
            x2="6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(0,10.5)"
        >
          <line
            stroke="currentColor"
            x2="6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(0,15.5)"
        >
          <line
            stroke="currentColor"
            x2="6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(0,20.5)"
        >
          <line
            stroke="currentColor"
            x2="6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(0,25.5)"
        >
          <line
            stroke="currentColor"
            x2="6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(0,30.5)"
        >
          <line
            stroke="currentColor"
            x2="6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(0,35.5)"
        >
          <line
            stroke="currentColor"
            x2="6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(0,40.5)"
        >
          <line
            stroke="currentColor"
            x2="6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(0,45.5)"
        >
          <line
            stroke="currentColor"
            x2="6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(0,50.5)"
        >
          <line
            stroke="currentColor"
            x2="6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="9"
          />
        </g>
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Axis component renders a top axis 1`] = `
<DocumentFragment>
  <svg>
    <text
      class="chart-it axis-title"
      transform="translate(490, 5)"
    >
      x
    </text>
    <g
      transform="translate(0, 30)"
    >
      <g
        class="chart-it axis axis-top"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        style="color: rgb(51, 51, 51); stroke-opacity: 0.8; stroke-width: 1;"
        text-anchor="middle"
      >
        <path
          class="domain"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(0.5,0)"
        >
          <line
            stroke="currentColor"
            y2="-6"
          />
          <text
            dy="0em"
            fill="currentColor"
            y="-9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(10.5,0)"
        >
          <line
            stroke="currentColor"
            y2="-6"
          />
          <text
            dy="0em"
            fill="currentColor"
            y="-9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(20.5,0)"
        >
          <line
            stroke="currentColor"
            y2="-6"
          />
          <text
            dy="0em"
            fill="currentColor"
            y="-9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(30.5,0)"
        >
          <line
            stroke="currentColor"
            y2="-6"
          />
          <text
            dy="0em"
            fill="currentColor"
            y="-9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(40.5,0)"
        >
          <line
            stroke="currentColor"
            y2="-6"
          />
          <text
            dy="0em"
            fill="currentColor"
            y="-9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(50.5,0)"
        >
          <line
            stroke="currentColor"
            y2="-6"
          />
          <text
            dy="0em"
            fill="currentColor"
            y="-9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(60.5,0)"
        >
          <line
            stroke="currentColor"
            y2="-6"
          />
          <text
            dy="0em"
            fill="currentColor"
            y="-9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(70.5,0)"
        >
          <line
            stroke="currentColor"
            y2="-6"
          />
          <text
            dy="0em"
            fill="currentColor"
            y="-9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(80.5,0)"
        >
          <line
            stroke="currentColor"
            y2="-6"
          />
          <text
            dy="0em"
            fill="currentColor"
            y="-9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(90.5,0)"
        >
          <line
            stroke="currentColor"
            y2="-6"
          />
          <text
            dy="0em"
            fill="currentColor"
            y="-9"
          />
        </g>
        <g
          class="tick"
          opacity="0.000001"
          transform="translate(100.5,0)"
        >
          <line
            stroke="currentColor"
            y2="-6"
          />
          <text
            dy="0em"
            fill="currentColor"
            y="-9"
          />
        </g>
      </g>
    </g>
  </svg>
</DocumentFragment>
`;
